# School-Qbank

./: .gitignore  .pre-commit-config.yaml  README.md  mineru.txt  web端报错.md  二期计划.md  分题计划.md  后端报错.md  启动.md  魔改计划.md
backend/: _verify_ai.py  _verify_batch.py  _verify_workbench.py  celery_app.py  clean_null_kp.py  pyproject.toml  verify_module_tree.py
backend/agent/: __init__.py  canvas.py
backend/agent/component/: __init__.py  base.py  begin.py  llm.py  loop.py  message.py  param.py  switch.py  tool.py
backend/agent/prompts/: __init__.py  generator.py
backend/agent/tools/: __init__.py  base.py  knowledge.py  paper.py  question.py
backend/app/: config.py  database.py  main.py
backend/app/api/: ai.py  auth.py  exports.py  homework.py  knowledge.py  paper_templates.py  papers.py  questions.py  stats.py  system.py  upload.py
backend/app/models/: __init__.py  ai_provider.py  export_record.py  homework.py  homework_question.py  instance_model.py  knowledge_point.py  paper.py  paper_template.py  provider_instance.py  question.py  question_knowledge.py  system_setting.py  tenant_provider.py  user.py
backend/common/: __init__.py  config_utils.py  constants.py  log_utils.py
backend/conf/: __init__.py  llm_factories.json  service_conf.yaml  system_settings.json
backend/data/: schoolwork.db
backend/llm/: __init__.py  factory.py  model_meta.py
backend/pipeline/: __init__.py  base.py  pipeline.py
backend/scripts/: backfill_table_html.py  integration_test_pdf_1to1.py  migrate_image_paths_in_db.py  migrate_images_to_papers.py  verify_pdf_1to1.py
(+254 files in other folders)
