[project]
name = "math-question-bank-vlm"
version = "0.2.0"
description = "小学数学智能题库系统 - VLM精简版"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# 行长度限制
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
]
ignore = [
    "E402",  # 模块级导入顺序
    "E501",  # 行长度（由 formatter 处理）
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
